--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "norahammenberg",
+  "name": "norahammenberg.github.io",
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
